--- a/urls.cfg
+++ b/urls.cfg
@@ -16,3 +16,4 @@ Cloud9=https://filecloud-9-ars-cont-st.dkon.app
 Cloud10=https://filecloud-10-ars-cont-st.dkon.app
 Cloud11=https://filecloud-11-ars-cont-st.dkon.app
 Cloud12=https://filecloud-12-ars-cont-st.dkon.app
+Cloud13=https://filecloud-13-ars-cont-st.dkon.app
