--- a/urls.cfg
+++ b/urls.cfg
@@ -17,3 +17,4 @@ Cloud10=https://filecloud-10-ars-cont-st.dkon.app
 Cloud11=https://filecloud-11-ars-cont-st.dkon.app
 Cloud12=https://filecloud-12-ars-cont-st.dkon.app
 Cloud13=https://filecloud-13-ars-cont-st.dkon.app
+Cloud14=https://filecloud-14-ars-cont-st.dkon.app
